<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Profiler</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="add">Add</string>
    <string name="profile_name">Profile Name</string>
    <string name="volume">Volume</string>
    <string name="ringtone">Select Ringtone</string>
    <string name="save">Save</string>
    <string name="select_ringtone">Select Ringtone</string>

    <color name="white">#ffffff</color>

</resources>