<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/dkr_gray"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewProfileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:text="@string/profile_name"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtProfileName"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom|end" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/wallpaperLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout"
        android:layout_alignParentLeft="true"
        android:background="@color/dk_gray" >

        <ImageView
            android:id="@+id/thumbImg"
            android:layout_width="100dp"
            android:layout_height="100dip"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/openGallery"
            android:paddingLeft="10dp"
            android:scaleType="fitXY" />

        <Button
            android:id="@+id/openGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="#00000000"
            android:paddingBottom="20dp"
            android:paddingLeft="5dp"
            android:paddingTop="20dp"
            android:text="Select Wallpaper"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>
     <TextView
        android:id="@+id/textViewVolume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wallpaperLayout"
        android:layout_alignParentLeft="true"
        android:background="@color/dkr_gray"
        android:padding="5dp"
        android:text="@string/volume"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_below="@id/textViewVolume"
        android:background="@color/dkr_gray"
        android:orientation="horizontal"
        android:paddingBottom="20dp" >

        <ImageView
            android:id="@+id/imageViewMode"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="5dp"
            android:src="@drawable/vibrate" />

        <SeekBar
            android:id="@+id/volumeBar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="5dp"
            android:max="16" />
    </LinearLayout>

   

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:background="@color/dk_gray"
        android:orientation="vertical" >

        <Button
            android:id="@+id/pickAudio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:gravity="left"
            android:padding="5dp"
            android:text="@string/ringtone"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewRingtone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/select_ringtone"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="italic" />
    </LinearLayout>

    <Button
        android:id="@+id/butSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="#44ffffff"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:onClick="onSaveBtnClicked"
        android:text="@string/save"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="18sp" />

</RelativeLayout>